--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 <h3>
 <a id="technology" class="anchor" href="#technology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technology</h3>
 
-<p>nanoTwitter is written in Ruby and utilizes a Sinatra framework, a more lightweight framework than Rails. </p>
+<p>nanoTwitter is written in Ruby and utilizes a Sinatra framework, a more lightweight framework than Rails. It relies extensively on Redis, which handles every feed including the front page. </p>
 
 <h3><a id="load-tests" class="anchor" href="#load-tests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Load Tests</h3>
 
-<h4>/front</h4>
-<div style="width: %100;">
-<iframe width='600' height='300' frameborder='0' src='http://share.loader.io/reports/5df3732e8cb236fb79f0b69c0867077d/widget/results/c5cdf5fe627b1160178f7d46f964b38b'></iframe>
+<h4>GET http://secret-shelf-78111.herokuapp.com/</h4>
+<div style="width: 600px;">
+<iframe width='600' height='300' frameborder='0' src='http://share.loader.io/reports/e2f30e5332395e53242ed35716e40eb6/widget/results/4836285c2a60d0bc8a029177841fba8d'></iframe>
 <div style="width: 100%; text-align: right;">
-<a href="http://loader.io/reports/5df3732e8cb236fb79f0b69c0867077d/results/c5cdf5fe627b1160178f7d46f964b38b" target="_blank" style="padding: 0 10px 10px 0; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 14px;">View on loader.io</a>
+<a href="http://loader.io/reports/e2f30e5332395e53242ed35716e40eb6/results/4836285c2a60d0bc8a029177841fba8d" target="_blank" style="padding: 0 10px 10px 0; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 14px;">View on loader.io</a>
 </div></div>
 <div class="results-summary">
   <div class="responses" style="float: left;">
@@ -87,11 +87,11 @@
       <table>
         <tbody><tr>
           <th>Average</th>
-          <td><span>5932</span> ms</td>
+          <td><span>3444</span> ms</td>
         </tr>
         <tr>
           <th>Min/Max</th>
-          <td><span>49 / 10010</span> ms</td>
+          <td><span>17 / 7430</span> ms</td>
         </tr>
       </tbody></table>
     </div>
@@ -102,9 +102,9 @@
       <table>
         <tbody><tr>
           <th>Success</th>
-          <td>2836</td>
+          <td>7800</td>
           <th>Timeout</th>
-          <td>1406</td>
+          <td>0</td>
         </tr>
         <tr>
           <th>400/500</th>
@@ -123,11 +123,131 @@
       <table>
         <tbody><tr>
           <th>Sent</th>
-          <td>2.62  MB</td>
+          <td>5.02  MB</td>
         </tr>
         <tr>
           <th>Received</th>
-          <td>19.86  MB</td>
+          <td>191.32  MB</td>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+</div>
+
+<h4>GET http://secret-shelf-78111.herokuapp.com/?user=Verda&password=123</h4>
+<div style="width: 600px;">
+<iframe width='600' height='300' frameborder='0' src='http://share.loader.io/reports/95c40a6608b8dbee7022d0852e17cc88/widget/results/2341153cc7c72c414d27fcfb4935e37f'></iframe>
+<div style="width: 100%; text-align: right;">
+<a href="http://loader.io/reports/95c40a6608b8dbee7022d0852e17cc88/results/2341153cc7c72c414d27fcfb4935e37f" target="_blank" style="padding: 0 10px 10px 0; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 14px;">View on loader.io</a>
+</div></div>
+<div class="results-summary">
+  <div class="responses" style="float: left;">
+    <div>
+      <h5>Response Times</h5>
+      <table>
+        <tbody><tr>
+          <th>Average</th>
+          <td><span>2260</span> ms</td>
+        </tr>
+        <tr>
+          <th>Min/Max</th>
+          <td><span>13 / 8989</span> ms</td>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+  <div class="errors" style="float: right; margin: 0px 40px;">
+    <div>
+      <h5 style="text-align: right;">Response Counts</h5>
+      <table>
+        <tbody><tr>
+          <th>Success</th>
+          <td>3010</td>
+          <th>Timeout</th>
+          <td>0</td>
+        </tr>
+        <tr>
+          <th>400/500</th>
+          <td>0 / 121</td>
+          <th>Network</th>
+          <td>0</td>
+        </tr>
+        <tr>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+  <div class="activity" style="clear: both;">
+    <div>
+      <h5>Bandwidth</h5>
+      <table>
+        <tbody><tr>
+          <th>Sent</th>
+          <td>2.25  MB</td>
+        </tr>
+        <tr>
+          <th>Received</th>
+          <td>59.79  MB</td>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+</div>
+
+<h4>GET http://secret-shelf-78111.herokuapp.com/?user=Verda&password=123?randomtweet=50</h4>
+<div style="width: 600px;">
+<iframe width='600' height='300' frameborder='0' src='http://share.loader.io/reports/6ef9170cb621439404acb9944fa5a08a/widget/results/808cd02e0a65f89f55d0ae2008828fa9'></iframe>
+<div style="width: 100%; text-align: right;">
+<a href="http://loader.io/reports/6ef9170cb621439404acb9944fa5a08a/results/808cd02e0a65f89f55d0ae2008828fa9" target="_blank" style="padding: 0 10px 10px 0; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; font-size: 14px;">View on loader.io</a>
+</div></div>
+<div class="results-summary">
+  <div class="responses" style="float: left;">
+    <div>
+      <h5>Response Times</h5>
+      <table>
+        <tbody><tr>
+          <th>Average</th>
+          <td><span>6718</span> ms</td>
+        </tr>
+        <tr>
+          <th>Min/Max</th>
+          <td><span>17 / 10008</span> ms</td>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+  <div class="errors" style="float: right; margin: 0px 40px;">
+    <div>
+      <h5 style="text-align: right;">Response Counts</h5>
+      <table>
+        <tbody><tr>
+          <th>Success</th>
+          <td>1229</td>
+          <th>Timeout</th>
+          <td>659</td>
+        </tr>
+        <tr>
+          <th>400/500</th>
+          <td>0 / 44</td>
+          <th>Network</th>
+          <td>0</td>
+        </tr>
+        <tr>
+        </tr>
+      </tbody></table>
+    </div>
+  </div>
+  <div class="activity" style="clear: both;">
+    <div>
+      <h5>Bandwidth</h5>
+      <table>
+        <tbody><tr>
+          <th>Sent</th>
+          <td>1.37  MB</td>
+        </tr>
+        <tr>
+          <th>Received</th>
+          <td>24.53  MB</td>
         </tr>
       </tbody></table>
     </div>
